# web-playground

./: README.md
rust-mailer/: .gitignore  Cargo.toml
rust-mailer/migrations/20170831190802_create_orders/: up.sql
rust-mailer/src/: db.rs  main.rs
rust-mailer/src/entity/: mod.rs
