[package]
name = "rust-mailer"
version = "0.1.0"
authors = ["maggiolo00 <maggiolo00@gmail.com>"]


[dependencies]
rocket = "0.3.2"
rocket_codegen = "0.3.2"
rocket_contrib = "*"

# DB Deps
diesel = { version = "*", features = ["postgres","chrono"]  }
diesel_codegen = { version = "*", features = ["postgres"] }
r2d2 = "*"
r2d2-diesel = "*"
dotenv = "*"


serde = "*"
serde_json = "*"
serde_derive = "*"

